--- a/부스트캠프_2주_8일차_pandas/부스트캠프_2주_8일차_Pandas.ipynb
+++ b/부스트캠프_2주_8일차_pandas/부스트캠프_2주_8일차_Pandas.ipynb
@@ -88,7 +88,7 @@
     "- 리인덱스 시켜줄때 (reindex)\n",
     "    - df.index = list(range(0,15) 이런식으로 가능\n",
     "    - df.reset_index(drop = True) 를하면 기존 인덱스 날리고 함\n",
-    "- 분석시 Data Frame 값?\n",
+    "- 분석시 Data Frame 값? 수정사항 유지 또는 변경??\n",
     "    - 안바꾸는 것을 권장함, 하지만 inplace = True를 하면 바꿀수는 있음\n",
     "    - 한 row를 없애려면 drop 쓰면 되고 inplace = Ture를 해주어야 날아감"
    ]
