--- a/부스트캠프_3주_13일차_CNN/부스트캠프_3주_13일_1x1 convolution의 중요성.ipynb
+++ b/부스트캠프_3주_13일차_CNN/부스트캠프_3주_13일_1x1 convolution의 중요성.ipynb
@@ -64,7 +64,7 @@
     "- ReLU를 사용하였음 : 효과적인 Activation Function\n",
     "    - x가 클때 표현 잘해줌\n",
     "    - sigmoid는 너무 큰 X에서 기울기가 0에 가까워서 베니쉬 되는것 방지\n",
-    "- Local Response Normaliztion : 입력 공간에서 리스폰스 많이나오는 것 죽임. 많이는 안씀\n",
+    "- Local Response Normaliztion 사용함 : 입력 공간에서 리스폰스 많이나오는 것 죽임. 많이는 안씀\n",
     "- Data augmentation 사용함\n",
     "- Dropout 사용함\n",
     "![image.png](attachment:image.png)\n",
