--- a/부스트캠프_3주_13일차_CNN/부스트캠프_3주_13일_CNN Convolution.ipynb
+++ b/부스트캠프_3주_13일차_CNN/부스트캠프_3주_13일_CNN Convolution.ipynb
@@ -42,7 +42,18 @@
     "- 일반적인 RGB에 필터를 씌우면?\n",
     "![image.png](attachment:image.png)\n",
     "![image-2.png](attachment:image-2.png)\n",
-    "- 한번 Conv 거치면 Nonlinear Activation 필요"
+    "- 한번 Conv 거치면 다른 Dense Layer랑 마찬가지로 Nonlinear Activation 필요"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### conv filter 크기는 아래 보면서 생각해보기\n",
+    "- 이전 layer의 channel은 filter 크기에 반영\n",
+    "- filter size 반영\n",
+    "- 이후 layer의 channel 크기 개수 만큼 filter 필요함\n",
+    "- 따라서, 이전 layer Channel * 이후 layer Channel * 필터 사이즈(N * M)"
    ]
   },
   {
@@ -54,7 +65,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- conv filter 크기는 아래 보면서 생각해보기\n",
     "![image.png](attachment:image.png)"
    ]
   },
@@ -64,6 +74,7 @@
    "source": [
     "### Convolutional 과 pooling layer 역할\n",
     "- 이미지에서 유용한 정보를 뽑아주는 역할  \n",
+    "- Max pooling을 한다던지 해서 그 안에서 연산을 곱해주는 filter는 아니고 거기서 뽑아내 주는 역할\n",
     "\n",
     "### fully connected layer 역할?\n",
     "- 분류를 해주는 역할"
@@ -183,7 +194,7 @@
     "        - 컨벌루셔널 오퍼레이터가 각각의 위치에서 동일하게 적용됨\n",
     "        - 같은 커널이 동일하게 이동하면서 적용시키는 것이기 때문에 그럼\n",
     "    - So what?\n",
-    "        - 그래서 앞단에서 Conv Layer는 많이쌓고 Fully connected는 줄이는 중"
+    "        - 그래서 앞단에서 Conv Layer는 많이 쌓고 Fully connected는 줄이는 중"
    ]
   },
   {
