--- a/부스트캠프_3주_14일차_RNN(Recurrent Neural Networks)/부스트캠프_3주_14일_Sequential Models (RNN).ipynb
+++ b/부스트캠프_3주_14일차_RNN(Recurrent Neural Networks)/부스트캠프_3주_14일_Sequential Models (RNN).ipynb
@@ -52,8 +52,8 @@
     "    - 원하는 것이 하나, 두개 딱 떨어지지 않음\n",
     "    - 받아 들어야할 차원이 얼마나 되는지 몰라서 문제임\n",
     "    - 즉, 몇개의 입력이 들어와도 받아들어야함\n",
-    "        - 과거 데이터는 계속 늘어나는게 문제\n",
-    "- 해결방법? : 몇 개만 보겠다고 정해두는 것 (Markov model)\n",
+    "    - 과거 데이터는 계속 늘어나는게 문제\n",
+    "- 해결방법1 : 몇 개만 보겠다고 정해두는 것 (Markov model)\n",
     "    - 말이 안됨, 내일의 수능 점수는 어제 공부량만 연관있다고 봄\n",
     "![image.png](attachment:image.png)\n",
     "- 해결방법 2 : Latent autoregressiove model (하나의 과거가 그 이전의 과거를 Summarize해 주면 됨)\n",
