--- a/부스트캠프_3주_12일차_최적화/부스트캠프_3주_12일_Optimization.ipynb
+++ b/부스트캠프_3주_12일차_최적화/부스트캠프_3주_12일_Optimization.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 잘 몰랐던 것\n",
+    "- Generalization 이란???\n",
+    "- Cross-Validation 이란??\n",
+    "- Batch Size 너무 크게하면 문제점??\n",
+    "- Regularization 은 무엇이며? 6가지 방법은?\n",
+    "- GD 의 대표적인 방법들 4개만 말해보라\n",
+    "\n",
     "# Optimization\n",
     "- 다양한 Gradient Descent 기법\n",
     "    - 기존 SGD(Stochastic gradient descent)를 넘어서 최적화(학습)가 더 잘될 수 있도록 하는 다양한 기법\n",
     "    - Gradient Descent 기법에 따른 성능의 변화\n",
     "- 주요 용어\n",
-    "    - Generalization,Overfitting, Cross-validation\n",
+    "    - Generalization, Overfitting, Cross-validation\n",
     "- 추가 질문\n",
     "    - 올바르게(?) cross-validation을 하기 위해서는 어떻 방법들이 존재?\n",
     "        - Nest cross-validation\n",
@@ -31,12 +38,12 @@
    "metadata": {},
    "source": [
     "### 최적화의 중요한 컨셉\n",
-    "    - Generalization\n",
-    "    - Under-fitting vs over-fitting\n",
-    "    - Cross validation\n",
-    "    - Bias-variance tradeoff\n",
-    "    - Bootstrapping\n",
-    "    - Bagging and boosting"
+    "- **Generalization**  \n",
+    "- **Under-fitting vs over-fitting**  \n",
+    "- **Cross validation**  \n",
+    "- **Bias-variance tradeoff**  \n",
+    "- **Bootstrapping**  \n",
+    "- **Bagging and boosting**  "
    ]
   },
   {
@@ -49,6 +56,7 @@
    "metadata": {},
    "source": [
     "#### Generalization\n",
+    "- Train과 Test 사이에 괴리가 생기지 않도록 학습시키는 것을 Generalization 이라고 함\n",
     "![image.png](attachment:image.png)"
    ]
   },
