--- a/부스트캠프_3주_13일차_CNN/부스트캠프_3주_13일_3_Computer Vision Application.ipynb
+++ b/부스트캠프_3주_13일차_CNN/부스트캠프_3주_13일_3_Computer Vision Application.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 복습 \n",
+    "- Detection 방법 발전해 왔음 (4가지) 특징?\n",
+    "\n",
     "# 목표\n",
     "- Computer Vision 에서 CNN을 이용한 분야 알아보기\n",
     "\n",
