--- a/부스트캠프_3주_14일차_RNN(Recurrent Neural Networks)/부스트캠프_3주_14일_1_RNN 첫걸음(이론).ipynb
+++ b/부스트캠프_3주_14일차_RNN(Recurrent Neural Networks)/부스트캠프_3주_14일_1_RNN 첫걸음(이론).ipynb
@@ -4,6 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 복습 필요내용\n",
+    "- RNN은 기본 MLP와 달리 가중치 파라미터 몇개 필요?\n",
+    "- BPTT란? : \n",
+    "    - 계산시 문제점?\n",
+    "    - 해결방법?\n",
+    "\n",
     "# RNN 첫걸음\n",
     "\n",
     "## 강의 내용\n",
