--- a/부스트캠프_3주_14일차_RNN(Recurrent Neural Networks)/부스트캠프_3주_14일_3_Sequential Model ( Transformer 주의 매우어렵 ).ipynb
+++ b/부스트캠프_3주_14일차_RNN(Recurrent Neural Networks)/부스트캠프_3주_14일_3_Sequential Model ( Transformer 주의 매우어렵 ).ipynb
@@ -69,7 +69,7 @@
     "- RNN은 한개씩 들어가면서 재귀적으로 돌아가는 구조\n",
     "- Transformer는 attention이라는 구조를 활용했다!\n",
     "- 미리 말씀드리면 : 시퀀스데이터를 인코딩 하는 방법이기 때문에, \n",
-    "    - 이미지분류, 이미지 디텍터, 비쥬얼 트렌스 포머, 달리(문장이 주어지면 그것에 맞는 이미주 보여줌) 등에 다양하게 사용되고 있음\n",
+    "    - 이미지분류, 이미지 디텍터, 비쥬얼 트렌스 포머, 달리(문장이 주어지면 그것에 맞는 이미지 보여줌) 등에 다양하게 사용되고 있음\n",
     "    - 잘 이해하자!\n",
     "- 미리 말씀드리면2 : 실습이 주어지면\n",
     "    - 어텐션 구조와 실제 구현할때는 다른점이 1개 있는데 잘 생각해보자\n",
@@ -82,7 +82,7 @@
     "- 중요한점,, 이해해야하는점?\n",
     "    - n개의 단어가 어떻게 한번에 찍어내나?\n",
     "    - 디코더와 인코더 사이에 어떤 정보를 주고 받나?\n",
-    "    - 디코더가 어떻게 제너레이션 할 수 있는지를 이해해야함\n",
+    "    - 디코더가 어떻게 제너레이션 할 수 있는지를 이해해야 함\n",
     "![image-3.png](attachment:image-3.png)\n",
     "![image-5.png](attachment:image-5.png)"
    ]
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### position 인코딩\n",
+    "#### Position 인코딩\n",
     "- 입력에 특정 바이어스를 더해주는 것 : 그런데 이게 어떻게 포지션을 반영할까?\n",
     "    - 아래의 사진이 하나의 예시임\n",
     "- 왜 필요한가?\n",
