--- a/부스트캠프_4주_16일차_NLP/부스트캠프_4주_16일_2_Word Embedding.ipynb
+++ b/부스트캠프_4주_16일차_NLP/부스트캠프_4주_16일_2_Word Embedding.ipynb
@@ -26,6 +26,7 @@
     "        - 이 단어가 다음 문장에 영향을 어떻게 줄지에 대한 내용도 반영하기가 어려울 것으로 판단됨\n",
     "- 강의 들으면서 궁금했던 점\n",
     "    - 임베딩이 단어를 Vector로 표현해주는 것이라면, Input Vector와, Output Vector 두가지로 표현되는 것인지?\n",
+    "        - 굳이 하지않음 vector 하나로 연결되면 되는데 너무 많은 벡터가 나오게 됨\n",
     "    - 히든 레이어를 더 사용해서 Vector 2개가 아니라 여러개도 가능한가? (가능할 것 같은데)"
    ]
   },
