--- a/Week4_NLP/부스트캠프_4주_16일차_NLP/부스트캠프_4주_16일_1_NLP와  Bag of Words.ipynb
+++ b/Week4_NLP/부스트캠프_4주_16일차_NLP/부스트캠프_4주_16일_1_NLP와  Bag of Words.ipynb
@@ -83,7 +83,7 @@
     "        - 머신러닝은 숫자로 된 Data를 입력과 출력으로 내는게 필요해서 Vector로 전환시켜서 나타냄\n",
     "    - RNN을 주로 사용함\n",
     "        - LSTM을 특히 많이 사용해왔으나\n",
-    "        - Tansformer가 : Attention is All you need 가 발표되면서 Tansformer가 발표되면서 이게 NLP의 기본이 되었음\n",
+    "        - Tansformer : Attention is All you need 가 발표되면서 Tansformer가 발표되면서 이게 NLP의 기본이 되었음\n",
     "            - 활용?\n",
     "                - 자연어 처리\n",
     "                - 이미지 처리에도 활용\n",
@@ -107,7 +107,7 @@
    "metadata": {},
    "source": [
     "## Bag-of-Words\n",
-    "- 가방에다가 단어들을 순서대로 집어 넣어서 Vecrot로 만들어주어 Bag of Words라고 말함\n",
+    "- 가방에다가 단어들을 순서대로 집어 넣어서 Vector로 만들어주어 Bag of Words라고 말함\n",
     "- one hot encodding\n",
     "    - 아래와 같이 문장에서 단어들을 뽑아내고, 해당 Demension의 값을 1, 나머지를 0으로 해서 8개의 Vector로 나타낼 수 있음\n",
     "    - 아래 그림에서 보듯이 단어 거리가 같음, 그리고 시밀러리티를 표현하지 못함\n",
